# Andrea_pagina

./: .gitignore  Cargo.toml  README.md  cookies.txt
migrations/: 20250928161923_users.down.sql  20250928161923_users.up.sql  20251102013415_update_users_table.down.sql  20251102013415_update_users_table.up.sql  20251112005248_update_curse_and_payment.down.sql  20251112005248_update_curse_and_payment.up.sql  20251113002328_update_users_and_user_settings.down.sql  20251113002328_update_users_and_user_settings.up.sql  20251113183842_update_courses_create_videos.up.sql  20251130000327_db_vallenato.sql  20251206203047_paypal_product_id.sql  20251221013409_payments_amount_BIGINT.sql  20251223015450_user_courses_add_created_updated.sql  20251223021013_user_courses_add_created_updated.sql  20251226234548_course_and_lesson_progress.sql  20251227031826_course_and_lesson_progress_fix.sql  20251231121818_comments_and_ratings.sql  20251231145134_deleted_course_rating.sql  20260104130517_subscription_plans_and_reset_tokens.sql  20260104134306_update_achievements_and_plans.sql  20260104142614_make_paypal_plan_id_nullable.sql  20260104205227_create_user_stats_table.sql  20260105183910_alter_user_achievement.sql
src/: main.rs
src/auth/: auth.rs
src/config/: config.rs  dtos.rs  mod.rs
src/db/: db.rs
src/errors/: error.rs
src/func/: achievements.rs  courses.rs  handlers.rs  mod.rs  notifications.rs  payments.rs  subscriptions.rs  users.rs
src/mail/: mails.rs  mod.rs  sendmail.rs
src/middleware/: middleware.rs
src/models/: models.rs
src/routes/: routes.rs
src/services/: mod.rs  paypal_client.rs
src/test/: test.rs
src/utils/: password.rs  token.rs
