[package]
name = "pagina_andrea_vallenato"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4.11.0", features = ["openssl"] }
argon2 = "0.5.3"
async-trait = "0.1.89"
bcrypt = "0.17.1"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
lettre = "0.11.19"
mockall = "0.13.1"
openssl = "0.10.73"
reqwest = { version = "0.12.23", features = [
    "json",
    "blocking",
    "multipart",
    "rustls-tls",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
    "chrono",
    "runtime-tokio",
    "macros",
] }
time = "0.3.44"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.20"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
validator = "0.20.0"
