[package]
name = "pagina_andrea_vallenato"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-service = "2.0.3"
actix-web = { version = "4.12.0", features = ["openssl"] }
argon2 = "0.5.3"
async-trait = "0.1.89"
bcrypt = "0.17.1"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
futures = "0.3.31"
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
lettre = "0.11.19"
mockall = "0.13.1"
openssl = "0.10.74"
reqwest = { version = "0.12.24", features = ["json", "blocking", "multipart", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
    "chrono",
    "runtime-tokio",
    "macros",
    "bigdecimal",
] }
time = "0.3.44"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.20"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }
num-bigint-dig = "0.9.1"
log = "0.4.29"
bigdecimal = "0.4.9"
